--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^12.1.5",
         "@testing-library/user-event": "^13.5.0",
+        "@material-ui/core": "^4.9.11",
+        "@material-ui/icons": "^4.9.1",
+        "chart.js": "4.3.3",
+        "faker": "5.5.3",
+        "react-chartjs-2": "5.2.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router": "^5.1.2",
@@ -47,6 +52,7 @@
     },
     "devDependencies": {
         "eslint": "^8.46.0",
-        "eslint-plugin-react": "^7.33.1"
+        "eslint-plugin-react": "^7.33.1",
+        "@types/faker": "5.5.9"
     }
 }
