--- a/package.json
+++ b/package.json
@@ -1,58 +1,64 @@
 {
-    "name": "lg-iss",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@babel/core": "^7.22.9",
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@babel/preset-env": "^7.22.9",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^12.1.5",
-        "@testing-library/user-event": "^13.5.0",
-        "@material-ui/core": "^4.9.11",
-        "@material-ui/icons": "^4.9.1",
-        "chart.js": "4.3.3",
-        "faker": "5.5.3",
-        "react-chartjs-2": "5.2.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-router": "^5.1.2",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "5.0.1",
-        "sass": "^1.64.1",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ],
-        "rules": {
-            "react/jsx-uses-react": "off",
-            "react/react-in-jsx-scope": "off"
-        }
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "eslint": "^8.46.0",
-        "eslint-plugin-react": "^7.33.1",
-        "@types/faker": "5.5.9"
-    }
+	"name": "lg-iss",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@babel/core": "^7.22.9",
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"@babel/preset-env": "^7.22.9",
+		"@material-ui/core": "^4.9.11",
+		"@material-ui/icons": "^4.9.1",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^12.1.5",
+		"@testing-library/user-event": "^13.5.0",
+		"chart.js": "4.3.3",
+		"classnames": "^2.3.2",
+		"faker": "5.5.3",
+		"prettier": "^3.0.1",
+		"react": "^16.13.1",
+		"react-chartjs-2": "5.2.0",
+		"react-dom": "^16.13.1",
+		"react-router": "^6.14.2",
+		"react-router-dom": "^6.14.2",
+		"react-scripts": "5.0.1",
+		"sass": "^1.64.1",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		],
+		"rules": {
+			"react/jsx-uses-react": "off",
+			"react/react-in-jsx-scope": "off"
+		}
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/faker": "5.5.9",
+		"eslint": "^8.46.0",
+		"eslint-plugin-react": "^7.33.1",
+		"msw": "^1.2.3"
+	},
+	"msw": {
+		"workerDirectory": "public"
+	}
 }
