--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@babel/preset-env": "^7.22.9",
 		"@material-ui/core": "^4.9.11",
 		"@material-ui/icons": "^4.9.1",
+		"@material-ui/lab": "^4.0.0-alpha.61",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^12.1.5",
 		"@testing-library/user-event": "^13.5.0",
